--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body {
-    margin: 24px 110px 0 100px;
+    font-family: 'Roboto', sans-serif;
 }
