--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -2,6 +2,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    padding: 20px 110px 0 110px;
 }
 .logo > img {
     width: 130px;
@@ -13,6 +14,7 @@
 }
 .nav-links {
     display: flex;
+    align-items: center;
     gap: 40px;
 }
 .nav-links > li {
@@ -26,4 +28,9 @@
 }
 .nav-links > a {
     display: flex;
+    padding: 12px 32px;
+    border-radius: 4px;
+    background: #1D2130;
+    text-decoration: none;
+    color: #fff;
 }
